--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.reavture</groupId>
     <artifactId>plant-store-jenkins-demo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1</version>
     <!-- <packaging>war</packaging> -->
     <name>plant-store-jenkins-demo</name>
     <description>plant-store-jenkins-demo</description>
